--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,7 +22,7 @@
         <tbody>
         {% for student in students %}
             <tr>
-                <td>{{student.enrollment_number}}</td>
+                <td>{{student.id}}</td>
                 <td>{{student.student_name}}</td>
                 <td>{{student.father_name}}</td>
                 <td>{{student.contact_number}}</td>
