--- a/app/templates/create_student.html
+++ b/app/templates/create_student.html
@@ -5,19 +5,6 @@
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">{{ legend }}</legend>
-            <div class="form-group">
-                {{ form.enrollment_number.label(class="form-control-label") }}
-                {% if form.enrollment_number.errors %}
-                    {{ form.enrollment_number(class="form-control form-control-md is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.enrollment_number.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.enrollment_number(class="form-control form-control-md") }}
-                {% endif %}
-            </div>
             
             <div class="form-group">
                 {{ form.student_name.label(class="form-control-label") }}
@@ -58,6 +45,34 @@
                     </div>
                 {% else %}
                     {{ form.contact_number(class="form-control form-control-md") }}
+                {% endif %}
+            </div>
+
+            <div class="form-group">
+                {{ form.course_name.label(class="form-control-label") }}
+                {% if form.course_name.errors %}
+                    {{ form.course_name(class="form-control form-control-md is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.course_name.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.course_name(class="form-control form-control-md") }}
+                {% endif %}
+            </div>
+
+            <div class="form-group">
+                {{ form.total_fees.label(class="form-control-label") }}
+                {% if form.total_fees.errors %}
+                    {{ form.total_fees(class="form-control form-control-md is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.total_fees.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.total_fees(class="form-control form-control-md") }}
                 {% endif %}
             </div>
 
